--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_riverpod: ^2.4.9
   smooth_page_indicator: ^1.1.0
   flutter_screenutil: ^5.9.0
+  dartz: ^0.10.1
+  json_annotation: ^4.0.1
+  json_serializable: ^6.1.4
   iconly: ^1.0.1
   #Routing Package
   auto_route: ^7.8.4
@@ -53,6 +56,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   auto_route_generator: ^7.3.2
+  build_runner: ^2.1.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
