--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   iconly: ^1.0.1
   #Routing Package
   auto_route: ^7.8.4
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
