--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   #Routing Package
   auto_route: ^7.8.4
   equatable: ^2.0.5
+  #test dependency
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
